# Filestuff

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  sonar-project.properties  test.sh
include/: cutnwrite.c  cutnwrite.h  mergefiles.h  metafile.c  metafile.h
src/: main.c
src/include/: cutnwrite.c  cutnwrite.h  mergefiles.c  metafile.c  metafile.h  trackers.c  trackers.h
